@@ -4,7 +4,8 @@
 -   "More mod" card
 -   "More departments" card
 -   "Prestige multi doesn't decrease" card
-
+-   "Space Mining" card
+-   "Solar Energy" card
 
 14/08/2020
 -   Added "Auto save & refresh" as workaround for memory leaks
